Moved GSuite verification to head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <meta name="google-site-verification" content="l_xPzVp0cti-ahMAASwF9kv0ZEMx6x3NE251FEiRcV8" />
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
